# e-commerce-neuro-analytics

./: .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: eval-gate.yml
backend/agent/: classifier.py  graph.py  llm.py  planner.py  query_log.py  router.py  sql_generator.py  sql_runner.py  tracer.py
backend/agent/prompts/: sql_generator.txt
backend/api/: main.py
backend/api/routes/: chat.py
backend/evals/: evaluators.py  gate.py  golden_dataset.json  langsmith_eval.py  results.json  run_langsmith.py  test_questions.py  test_ragas.py  thresholds.ci.json  thresholds.json  verify_langsmith.py
backend/evals/fixtures/: category_translation.parquet  customers.parquet  order_items.parquet  orders.parquet  payments.parquet  products.parquet  reviews.parquet  sellers.parquet
backend/rag/: retriever.py
backend/semantic_layer/: metrics.yaml
bot/: main.py
docker/: docker-compose.yml
docs/: customers.md  dataset.md  delivery.md  glossary.md  metrics.md  payments.md  seasonality.md  sellers.md
scripts/: load_data.py  make_ci_fixture.py
