[project]
name = "pet-analytica"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.28",
    "duckdb>=0.10",
    "chromadb>=0.5",
    "langfuse>=2.0",
    "pandas>=2.2",
    "pyarrow>=16",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[tool.ruff.lint]
select = ["E", "F", "I"]
